add bootstrap 4 contact form

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,30 +1,27 @@
 @import 'variables';
 @import 'nav';
+@import 'footer';
 body {
   color: $texas-rose;
   background-color: $pickled-bluewood;
 }
 
-a:link {
-  color: $cape-cod;
-  background-color: $porche;
-}
-
-a:visited {
-  color: $pickled-bluewood;
-  background-color: $porche;
-}
-
-a:hover {
-  color: $dolphin;
-  background-color: $texas-rose;
-}
-
-a:active {
-  color: $storm-gray;
-  background-color: $flax;
-}
-
+//   a:link {
+//   color: $cape-cod;
+//   background-color: $porche;
+// }
+// a:visited {
+//   color: $pickled-bluewood;
+//   background-color: $porche;
+// }
+// a:hover {
+//   color: $dolphin;
+//   background-color: $texas-rose;
+// }
+// a:active {
+//   color: $storm-gray;
+//   background-color: $flax;
+// }
 header {
   color: $flax;
   background-color: $tuna;
@@ -37,11 +34,10 @@ header {
   border-color: $dolphin;
 }
 
-.content img {
-  border-color: $malta;
-  outline-color: $bone;
-}
-
+//   .content img {
+//   border-color: $malta;
+//   outline-color: $bone;
+// }
 #imagegallery a {
   background-color: transparent;
 }
@@ -66,11 +62,10 @@ tr.highlight td {
   background-color: $coral-reef;
 }
 
-* {
-  padding: 0;
-  margin: 0;
-}
-
+//   * {
+//   padding: 0;
+//   margin: 0;
+// }
 body {
   margin: 1em 10%;
   background-image: url(../img/background.gif);
@@ -113,13 +108,15 @@ header {
   background-image: url(../img/drummer.gif);
 }
 
-.content img {
-  border-width: .1em;
-  border-style: solid;
-  outline-width: .1em;
-  outline-style: solid;
+#photos .content {
+  text-align: center;
 }
 
+//   .content img {
+//   border-width: .1em;
+//   border-style: solid;
+//   outline-width: .1em;
+//   outline-style: solid;}
 #imagegallery li {
   display: inline;
 }
@@ -171,12 +168,7 @@ td {
 }
 
 body {
-  font-size: 76%;
   font-family: "Helvetica", "Arial", sans-serif;
-}
-
-body * {
-  font-size: 1em;
 }
 
 a {
